--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -1,5 +1,3 @@
-/* carro.css */
-
 /* 1. Overlay e display do modal */
 .modal {
   position: fixed;
@@ -34,11 +32,8 @@
 
 /* 3. Header */
 .modal header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
   border-bottom: 1px solid #3f3f46;
-  padding-bottom: 12px;
   margin-bottom: 16px;
   padding: 0;
 }
@@ -169,6 +164,10 @@ td button {
   .modal > div > div[role="dialog"] {
     max-width: 720px;
     padding: 24px;
+  }
+
+  .modal .header {
+    text-align: left;
   }
 
   .container-preço {
