--- a/css/produto.css
+++ b/css/produto.css
@@ -39,6 +39,7 @@ main section ul {
     padding: 1.5rem 1.5rem 1.2rem;
     font-size: 1.2rem;
     font-weight: bold;
+    letter-spacing: 1.6px;
 }
 
 .produto div {
@@ -53,14 +54,15 @@ main section ul {
 .produto div span, .produto div strong {
     color: #EDEDED;
     font-size: 0.9rem;
+    letter-spacing: 1.6px;
 }
 
 .produto .preco {
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 2rem;
     color: #ffffff;
     margin-top: 1rem;
     text-align: right;
+    letter-spacing: 2.5px;
 }
 
 .produto .adicionar-ao-carrinho {
@@ -71,7 +73,7 @@ main section ul {
     border-radius: 8px;
     font-size: 1rem;
     cursor: pointer;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     transition: background-color 0.3s;
 }
 
