--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 /* === ESTRUTURA BASE === */
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #29272A;
+    background-color: #111111;
     min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto; 
