--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,5 +1,3 @@
-/* === HEADER === */
-
 .cabecalho {
    grid-area: header;
    display: flex;
@@ -9,8 +7,7 @@
    padding-top: 30px;
 }
 
-/* Logo */
-.cabecalho a img {
+.cabecalho .logo img {
    max-height: 40px;
    width: auto;
 }
@@ -45,7 +42,7 @@
 
 /* Botão do carrinho */
 .cabecalho .botao-carrinho {
-   background-color: #6528D3;
+   background-color: transparent;
    border: none;
    border-radius: 8px;
    padding: 0.75rem;
@@ -57,20 +54,23 @@
 }
 
 .cabecalho .botao-carrinho img {
-   width: 20px;
-   height: 20px;
+   width: 26px;
+   height: 26px;
 }
 
 .cabecalho .botao-carrinho span {
-   background-color: #ff4444;
+   position: absolute;
+   top: 27px;
+   left: 29px;
+   background-color: #6528D3;
    color: white;
    border-radius: 50%;
-   width: 20px;
-   height: 20px;
+   width: 16px;
+   height: 16px;
    display: flex;
    align-items: center;
    justify-content: center;
-   font-size: 0.8rem;
+   font-size: 0.7rem;
    font-weight: bold;
 }
 
