--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,81 +1,109 @@
+main {
+  padding: 1rem;
+}
+
 main section h2 {
-  font-size: 2rem;
+  color: var(--cor-neutra-clara);
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
   margin-bottom: 2rem;
-  text-align: center;
-  color: #333;
 }
 
 main section ul {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   gap: 2rem;
-  list-style: none;
 }
 
 .produto {
-  background-color: #ffffff;
+  background-color: var(--cor-neutra-clara);
+  max-width: 368px;
   border-radius: 14px;
-  transition: transform 0.3s, box-shadow 0.3s;
-  width: 368px;
 }
 
-.produto:hover {
-  transform: translateY(-5px);
+.produto figure {
+  margin: 0; /* zera qualquer gap do <figure> */
 }
 
 .produto figure img {
   width: 100%;
   height: 334px;
-  display: block;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+
+  display: block; /* elimina o gap de linha-base */
+  object-position: center; /* foca o centro da imagem */
+  object-fit: cover; /* preenche todo o container, cortando bordas vazias */
 }
 
 .produto figcaption {
-  background-color: #29272A;
-  color: #ffffff;
-  padding: 1.5rem 1.5rem 1.2rem;
+  background-color: var(--cor-cinza-escura);
+  color: var(--cor-neutra-clara);
   font-size: 1.2rem;
   font-weight: bold;
-  letter-spacing: 1.6px;
+  padding: 1.5rem 1.5rem 1.2rem;
+  letter-spacing: 0.1rem;
 }
 
-.produto div {
-  background-color: #29272A;
+.produto .informacoes {
+  background-color: var(--cor-cinza-escura);
   padding: 0 1.5rem 1.5rem;
   display: grid;
   gap: 0.5rem;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
 }
 
-.produto div span,
-.produto div strong {
-  color: #ededed;
+.produto .informacoes span,
+.produto .informacoes strong {
+  color: var(--cor-cinza-clara);
   font-size: 0.9rem;
-  letter-spacing: 1.6px;
+  letter-spacing: 0.1rem;
 }
 
-.produto .preco {
+.produto .informacoes .preco {
   font-size: 2rem;
-  color: #ffffff;
   margin-top: 1rem;
   text-align: right;
-  letter-spacing: 2.5px;
 }
 
 .produto .adicionar-ao-carrinho {
-  background-color: #6528d3;
-  color: white;
+  background-color: var(--cor-primaria);
   border: none;
-  padding: 1rem;
   border-radius: 8px;
+  color: var(--cor-neutra-clara);
   font-size: 1rem;
+  padding: 1rem;
   cursor: pointer;
   margin-top: 0.5rem;
   transition: background-color 0.3s;
 }
 
 .produto .adicionar-ao-carrinho:hover {
-  background-color: #0056b3;
+  background-color: var(--cor-primaria-hover);
+}
+
+/* === TABLET === */
+@media (min-width: 769px) {
+  main {
+    margin: 0 auto;
+  }
+
+  main section ul {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
+  }
+}
+
+/* === DESKTOP === */
+@media (min-width: 1170px) {
+  main section {
+    max-width: 1170px;
+  }
+
+  .produto {
+    width: 368px;
+  }
 }
