--- a/css/base.css
+++ b/css/base.css
@@ -1,18 +1,15 @@
 :root {
     /* Cores principais */
   --cor-primaria: #6528d3;     /* Cor principal da marca */
-  --cor-primaria-hover: #834de8;
+  --cor-secundaria: #111111;   /* Cor secundária */
   
   /* Cores neutras */
   --cor-neutra-clara: #ffffff;
-  --cor-neutra-escura: #111111;
-  --cor-cinza-escura: #29272a;
-  --cor-cinza-clara: #ededed;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: var(--cor-neutra-escura);
+    background-color: var(--cor-secundaria);;
     min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto; 
