--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -33,12 +33,12 @@
   display: block;
   height: 4px;
   width: 100%;
-  background: var(--cor-neutra-clara);
+  background: #ffffff;
   border-radius: 2px;
 }
 
 .cabecalho .menu-principal {
-  background-color: var(--cor-neutra-escura);
+  background-color: #111111;
   display: none;
   position: absolute;
   width: 100%;
@@ -56,14 +56,14 @@
 }
 
 .cabecalho .menu-principal ul li a {
-  color: var(--cor-neutra-clara);
+  color: #ffffff;
   letter-spacing: 0.1rem;
   transition: background-color 0.3s;
   padding: 0.75rem 1rem;
 }
 
 .cabecalho .menu-principal ul li a:hover {
-  background-color: var(--cor-primaria);
+  background-color: #6528d3;
 }
 
 .cabecalho.menu-ativo .menu-principal {
@@ -86,8 +86,8 @@
 }
 
 .botao-carrinho span {
-  background-color: var(--cor-primaria);
-  color: var(--cor-neutra-clara);
+  background-color: #6528d3;
+  color: #ffffff;
   font-weight: bold;
   font-size: 0.7rem;
   margin-left: 0.5rem;
@@ -104,7 +104,6 @@
 }
 
 @media (min-width: 940px) {
-  
   .cabecalho .menu-principal {
     display: block;
     position: static;
@@ -118,12 +117,5 @@
   .cabecalho .menu-principal ul {
     display: flex;
     flex-direction: row;
-  }
-}
-
-@media(min-width: 1170px) {
-  .cabecalho {
-    min-width: 1170px;
-    margin: 0 auto;
   }
 }
