--- a/css/rodape.css
+++ b/css/rodape.css
@@ -1,63 +1,60 @@
 footer {
-    grid-area: footer;
-    background-color: #29272A;
-    color: #BCA2ED;
-    padding: 2rem 1rem 0;
+  grid-area: footer;
+  background-color: #29272a;
+  color: #bca2ed;
 }
 
 footer .container {
-    display: flex;
-    width: 1280px;
-    margin: 0 auto;
-    gap: 2rem;
+  display: flex;
+  max-width: 1280px;
+  margin: 0 auto;
+  gap: 1rem;
+  flex-direction: column;
 }
 
 footer nav {
-    padding: 1rem 4.5rem;
+  padding: 1.5rem;
 }
 
 footer nav h3 {
-    color: #ffffff;
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
-    letter-spacing: 1.6px;
+  color: #ffffff;
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  letter-spacing: 1.6px;
 }
 
-footer nav ul li{
-    margin-bottom: 12px;
+footer nav ul li {
+  margin-bottom: 12px;
 }
 
 footer nav ul li a {
-    color: #BCA2ED;
-    text-decoration: none;
-    transition: color 0.3s;
-    letter-spacing: 1.6px;
+  color: #bca2ed;
+  text-decoration: none;
+  transition: color 0.3s;
+  letter-spacing: 1.6px;
 }
 
 footer nav ul li a:hover {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 footer .copyright {
-    background-color: #111111;
-    text-align: center;
-    grid-column: 1 / -1;
-    color: #EDEDED;
-    padding: 1rem;
-    font-size: 0.8rem;
-    letter-spacing: 1.6px;
-}
-
-@media (min-width: 769px) {
-    footer {
-        grid-template-columns: repeat(2, 1fr);
-        text-align: left;
-    }
+  background-color: #111111;
+  text-align: center;
+  grid-column: 1 / -1;
+  color: #ededed;
+  padding: 1.5rem;
+  font-size: 0.8rem;
+  letter-spacing: 1.6px;
 }
 
 @media (min-width: 1024px) {
-    footer {
-        grid-template-columns: repeat(3, 1fr);
-        /* padding: 4rem 2rem; */
-    }
+  footer .container {
+    flex-direction: row;
+    
+  }
+
+  footer nav {
+    padding: 3rem 4.5rem;
+  }
 }
