--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,114 +1,110 @@
 main {
+  grid-area: main;
   padding: 1rem;
 }
 
 main section h2 {
+  color: var(--cor-neutra-clara);
   font-size: 1.5rem;
-  margin-bottom: 2rem;
-  color: #ffffff;
   font-weight: 400;
-  letter-spacing: 1.6px;
+  letter-spacing: 0.1rem;
+  margin-bottom: 2rem;
 }
 
 main section ul {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
-  flex-wrap: wrap;
   gap: 2rem;
 }
 
 .produto {
-  background-color: #ffffff;
-  border-radius: 14px;
-  transition: transform 0.3s;
+  background-color: var(--cor-neutra-clara);
   max-width: 368px;
+  border-radius: 14px;
 }
 
-.produto:hover {
-  transform: translateY(-5px);
+.produto figure {
+  margin: 0; /* zera qualquer gap do <figure> */
 }
 
 .produto figure img {
   width: 100%;
   height: 334px;
-  object-fit: center;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
 
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  display: block; /* elimina o gap de linha-base */
+  object-position: center; /* foca o centro da imagem */
+  object-fit: cover; /* preenche todo o container, cortando bordas vazias */
 }
 
 .produto figcaption {
-  background-color: #29272a;
-  color: #ffffff;
-  padding: 1.5rem 1.5rem 1.2rem;
+  background-color: var(--cor-cinza-escura);
+  color: var(--cor-neutra-clara);
   font-size: 1.2rem;
   font-weight: bold;
-  letter-spacing: 1.6px;
+  padding: 1.5rem 1.5rem 1.2rem;
+  letter-spacing: 0.1rem;
 }
 
-.produto div {
-  background-color: #29272a;
+.produto .informacoes {
+  background-color: var(--cor-cinza-escura);
   padding: 0 1.5rem 1.5rem;
   display: grid;
   gap: 0.5rem;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
 }
 
-.produto div span,
-.produto div strong {
-  color: #ededed;
+.produto .informacoes span,
+.produto .informacoes strong {
+  color: var(--cor-cinza-clara);
   font-size: 0.9rem;
-  letter-spacing: 1.6px;
+  letter-spacing: 0.1rem;
 }
 
-.produto .preco {
+.produto .informacoes .preco {
   font-size: 2rem;
-  color: #ffffff;
   margin-top: 1rem;
   text-align: right;
-  letter-spacing: 2.5px;
 }
 
 .produto .adicionar-ao-carrinho {
-  background-color: #6528d3;
-  color: white;
+  background-color: var(--cor-primaria);
   border: none;
-  padding: 1rem;
   border-radius: 8px;
+  color: var(--cor-neutra-clara);
   font-size: 1rem;
+  padding: 1rem;
   cursor: pointer;
   margin-top: 0.5rem;
   transition: background-color 0.3s;
 }
 
 .produto .adicionar-ao-carrinho:hover {
-  background-color: #0056b3;
+  background-color: var(--cor-primaria-hover);
 }
 
 /* === TABLET === */
 @media (min-width: 769px) {
   main {
-    padding: 3rem 2rem;
+    margin: 0 auto;
   }
 
   main section ul {
     flex-direction: row;
-    gap: 2.5rem;
+    flex-wrap: wrap;
+    gap: 2rem;
   }
 }
 
 /* === DESKTOP === */
-@media (min-width: 1280px) {
+@media (min-width: 1170px) {
   main section {
-    /* grid-template-columns: repeat(3, 1fr); */
-    max-width: 1200px;
-    margin: 0 auto;
-    /* padding: 4rem 2rem; */
+    max-width: 1170px;
   }
 
-  main section ul {
-    gap: 3rem;
+  .produto {
+    width: 368px;
   }
 }
