--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,8 @@
   --cor-neutra-escura: #111111;
   --cor-cinza-escura: #29272a;
   --cor-cinza-clara: #ededed;
+  --cor-roxa-clara: #bca2ed;
+  --cor-cinza: #828282;
 }
 
 body {
